<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh_mainpage"
        android:icon="@drawable/ic_refresh_white_36dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_check_location"
        android:title="@string/action_location"
        android:icon="@drawable/ic_place_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_user_profile"
        android:title="@string/action_user_profile"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_action_shutdown"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />



</menu>