<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bricenangue.nextgeneration.ebuycamer.ChangePhoneNumberActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lineare_layout_phone_number_container_change_activity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:id="@+id/editText_layout_userprofile_country_code_change_activity"
            >
            <EditText
                android:id="@+id/editText_userprofile_country_code_change_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:maxLength="4"
                android:inputType="phone"
                android:hint="@string/userprofile_hint_country_code_country_exp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/editText_layout_userprofile_phone_number_change_activity"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/editText_userprofile_phone_number_change_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:maxLength="9"
                android:inputType="phone"
                android:hint="@string/userprofile_hint_phone_number"

                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:text="@string/string_button_phone_change_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineare_layout_phone_number_container_change_activity"
        android:layout_marginTop="25dp"
        android:id="@+id/button_change_phone"
        style="@style/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
